--- a/MyMainDiplomProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MyMainDiplomProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,23 +4,23 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="div-for-reg">Реєстрація</h1>
 
-<div class="row">
+<div class="div-for-reg">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h2>Створення акаунту</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
              <div class="form-floating mb-3">
                 <input asp-for="Input.userNikName" class="form-control" autocomplete="userNikName" aria-required="true" placeholder="userNikName" />
-                <label asp-for="Input.userNikName">userNikName</label>
+                <label asp-for="Input.userNikName">User name</label>
                 <span asp-validation-for="Input.userNikName" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.dateOfBirthday" class="form-control" autocomplete="dateOfBirthday" aria-required="true" placeholder="dateOfBirthday" />
-                <label asp-for="Input.dateOfBirthday">dateOfBirthday</label>
+                <label asp-for="Input.dateOfBirthday">Date of Birthday</label>
                 <span asp-validation-for="Input.dateOfBirthday" class="text-danger"></span>
             </div>
 
@@ -40,38 +40,14 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Реєстрація</button>
         </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
+        <div class="center-p">
+            <p>
+                <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Вже зареєстровані? Авторизуйтесь</a>
+            </p>
+        </div>
+
     </div>
 </div>
 
