--- a/MyMainDiplomProject/Views/Posts/Details.cshtml
+++ b/MyMainDiplomProject/Views/Posts/Details.cshtml
@@ -29,6 +29,20 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.User.Id)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Files)
+        </dt>
+        <dd class="col-sm-10">
+            @if(Model.Files != null)
+            {
+                if (Model.Files.FirstOrDefault() != null)
+                {
+                    <img src="@Model.Files.FirstOrDefault().FileName" />
+                }
+            }
+           
+            
+        </dd>
     </dl>
 </div>
 <div>
