--- a/MyMainDiplomProject/Views/Shared/_Layout.cshtml
+++ b/MyMainDiplomProject/Views/Shared/_Layout.cshtml
@@ -26,12 +26,16 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#"><i class="fa fa-home"></i></a></li>
-                <li><a href="#"><i class="fa fa-users"></i></a></li>
+                <li><a href="~/Home/Index"><i class="fa fa-home"></i></a></li>
+                <li><a href="~/UserAdditionalInfo/Users"><i class="fa fa-users"></i></a></li>
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <li><a href="#"><i class="fa fa-user"></i></a></li>
-                    <li><a href="#"><i class="fa fa-cog"></i></a></li>
+                    <li><a href="~/UserAdditionalInfo/Profile"><i class="fa fa-user"></i></a></li>
+                    <li><a href="~/UserAdditionalInfo/Setings"><i class="fa fa-cog"></i></a></li>
+                }
+                @if(User.Identity.AuthenticationType == "Admin")
+                {
+                    <li><a href="~/UserAdditionalInfo/AdminPanel"><i class="fa fa-cog"></i></a></li>
                 }
             </ul>
         </nav>
