--- a/MyMainDiplomProject/wwwroot/css/styles.css
+++ b/MyMainDiplomProject/wwwroot/css/styles.css
@@ -824,4 +824,19 @@ nav {
     border: 1px solid black;
     border-radius: 20px;
 }
-
+.align-span {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+}
+.align-label {
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+}
+.hr-style-for-create{
+    width: 100%;
+    margin-bottom: 20px;
+}
