--- a/MyMainDiplomProject/Views/Home/Index.cshtml
+++ b/MyMainDiplomProject/Views/Home/Index.cshtml
@@ -1,14 +1,106 @@
 ﻿@model List<Post>
 
+<head>
+    <title>Головна</title>
+</head>
+
+<div class="panel">
+    Стрічка новин
+</div>
+
+<div class="search-filter">
+    <h3>Пошук</h3>
+    <div class="post-content">
+
+        <label for="name">Ім'я користувача:</label>
+        <input type="text" id="name" name="name">
+
+        <label for="name">Хештег:</label>
+        <input type="text" id="name" name="name">
+
+        <select id="user-type" name="user-type">
+            <option value="friend">Підписки</option>
+            <option value="all">Усі користувачі</option>
+        </select>
+
+        <button type="submit">Пошук</button>
+    </div>
+
+    <div class="post-content">
+        <h3>Хештеги</h3>
+    </div>
+
+    <div class="post-content">
+        <a href=""><p>#історія</p></a>
+        <a href=""><p>#новини</p></a>
+        <a href=""><p>#ChatGPT</p></a>
+        <a href=""><p>#мистецтво</p></a>
+        <a href=""><p>#LeonardoAI</p></a>
+        <a href=""><p>#фізика</p></a>
+    </div>
+</div>
+
 @foreach (var post in Model)
 {
-    <div class="col-6 offset-2">
-        <h2>@post.Text</h2>
-        <p>Author: @post.User.UserName</p>
-        <p>Tags: @string.Join(", ", post.PostHashTags.Select(ht => ht.Name))</p>
-        @if (post.Files.Any())
-        {
-            <img src="@Url.Content(post.Files.First().FileName)" alt="Post image" />
-        }
+    
+    <div class="post-main-page">
+        <div class="user-info1">
+            <img class="user-image1" src="https://ichef.bbci.co.uk/news/999/cpsprodpb/15951/production/_117310488_16.jpg" alt="User profile picture">
+            <div class="user-details1">
+                <a href="~/Posts/UserProfile/@post.User.userNikName">
+                    <div class="user-name1">@post.User.userNikName</div>
+                </a>
+                <div class="post-date">@post.CreatedDateRime</div>
+            </div>
+            <img class="post-button" src="https://cdn4.iconfinder.com/data/icons/glyphs/24/icons_settings-48.png" alt="Post button">
+        </div>
+
+        <div class="post-hestag">
+        @foreach (var item in post.PostHashTags)
+            {
+                <a href="">
+                    <label>
+                        @item.Name
+                    </label>
+                </a>
+            }
+         </div>
+
+
+        <div class="post-content">
+            <div class="post-text">
+                <p>@post.Text</p>
+            </div>
+            @if (post.Files.Any())
+            {
+                <a  data-ajax-success="PopUpShow();" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#PopUpContent" href="/Posts/BigPost/@post.Id">
+                <img class="post-image" src="@Url.Content(post.Files.First().FileName)" alt="Post image" />
+                </a>
+            }
+        </div>
+        <div class="post-stats">
+            <button class="post-button">
+                <img class="heart-icon" src="https://cdn0.iconfinder.com/data/icons/freebies-2/24/like-1-48.png" alt="Heart icon">
+            </button>
+
+            <span class="heart-count">37</span>
+            <button class="post-button">
+                <img class="comment-icon" src="https://cdn3.iconfinder.com/data/icons/linecons-free-vector-icons-pack/32/bubble-48.png" alt="Comment icon">
+                
+            </button>
+            <span class="comment-count">4</span>
+        </div>
     </div>
 }
+
+<div id="PopUp" style=" background: rgba(0, 0, 0, 0.5); width: 100%; height: 100%; position: fixed  ; top: 0; left: 0; overflow-y: scroll; display: none; z-index: 9999999">
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-12 pt-4 pb-5 mt-5" id="PopUpContent" style="color: white;">
+            </div>
+            <button class="col-1 offset-9 btn btn-primary" style="position: fixed; top: 10%;" onclick="PopUpHide();">✖</button>
+        </div>
+    </div>
+</div>
+
+
