--- a/MyMainDiplomProject/Views/Posts/BigPost.cshtml
+++ b/MyMainDiplomProject/Views/Posts/BigPost.cshtml
@@ -63,7 +63,7 @@
     <div class ="post-stats"></div>
 
     <div style="margin-top: 20px;">
-        <div>
+        <div id="commentsContainer">
         @foreach (var item in Model.Comments)
         {
             <div class="comment-block">
@@ -87,6 +87,8 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
+      
+
         $(document).ready(function () {
             $('#commentForm').submit(function (e) {
                 e.preventDefault();
@@ -97,10 +99,28 @@
                     type: 'POST',
                     data: formData,
                     success: function () {
+                        updateComments();
+                        //window.location.href = '/Posts/BigPost/' + Model.Id;
                     },
                     error: function () {
                     }
                 });
             });
-        });
+
+            function updateComments() {
+                $.ajax({
+                    url: '@Url.Action("GetComments", "Comments")',
+                    type: 'GET',
+                    data: { postId: '@Model.Id' },
+                    success: function (data) {
+                        $('#commentsContainer').html(data);
+                    },
+                    error: function () {
+                        // Обробка помилки при отриманні коментарів
+                    }
+                });
+            }
+
+            // Оновити список коментарів при завантаженні сторінки
+            updateComments();
     </script>
